# proTailwind

./: package-lock.json  pyproject.toml  tailwind.config.js
account/: models.py  urls.py  views.py
account/templates/: signin.html  signup-back.html  signup-footer.html  signup-form.html  signup-header.html  signup.html
backend/: settings.py  urls.py
core/: urls.py  views.py
core/templates/: about.html  back.html  base.html  blog.html  clients.html  contact.html  counter.html  cta.html  features.html  footer.html  header.html  hero.html  index.html  pricing-table.html  projects.html  services.html  signup-base.html  team.html  testimonials.html
src/: style.css
static/src/: style.css
